<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlackpointsTraffic</string>
    <string name="action_settings">Settings</string>
    <string name="SNIPPET">snippet</string>
    <string name="hello_world">Hello world!</string>
    <string name="address">Địa chỉ:</string>
    <string name="date">Thêm vào từ:</string>
    <string name="category">Phân loại:</string>
    <string name="rating">Xếp hạng:</string>
    <string name="description">Mô tả:</string>
    <string name="distance">Khoảng cách:</string>
    
    <!-- Notification -->
    <string name="notification_Title">CHÚ Ý !! CẢNH BÁO ĐIỂM ĐEN</string>
    <string name="notification_Content">Bạn đang ở gần </string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Trang chủ</item>
        <item>Gần tôi</item>
        <item>Cài đặt</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_nearme</item>
        <item>@drawable/ic_settings</item>
    </array>

    <!-- Home -->
    <string name="graduated_project">Đồ án tốt nghiệp</string>
    <string name="project_name_1">Hệ thống cảnh báo điểm đen TNGT</string>
    <string name="project_name_2">trên nền điện toán đám mây</string>
    <string name="student">Sinh viên:</string>
    <string name="student_name">NGUYỄN HOÀNG ANH</string>
    <string name="student_roll_and_class">(1000321) (CNPM K51)</string>
    <string name="teacher">GVHD:</string>
    <string name="teacher_name">ThS. BÙI NGỌC DŨNG</string>
    
    <!-- Settings -->
    <!-- Title -->
    <string name="title_general">Cài đặt chung</string>
    <string name="title_distance">Khoảng cách</string>
    <!-- Summary -->
    <string name="summary_distance">Thay đổi khoảng cách quét vị trí của bạn</string>
    <!-- Distance to tracking -->
    <string-array name="distanceKeys">
        <item name="500">500 m</item>
        <item name="1000">1 km</item>
        <item name="2000">2 km</item>
        <item name="5000">5 km</item>
        <item name="10000">10 km</item>
        <item name="15000">15 km</item>
        <item name="20000">20 km</item>
        <item name="25000">25 km</item>
        <item name="30000">30 km</item>
        <item name="35000">35 km</item>
        <item name="40000">40 km</item>
        <item name="45000">45 km</item>
        <item name="50000">50 km</item>
    </string-array>
    <string-array name="distanceValues">
        <item name="500">500</item>
        <item name="1000">1000</item>
        <item name="2000">2000</item>
        <item name="5000">5000</item>
        <item name="10000">10000</item>
        <item name="15000">15000</item>
        <item name="20000">20000</item>
        <item name="25000">25000</item>
        <item name="30000">30000</item>
        <item name="35000">35000</item>
        <item name="40000">40000</item>
        <item name="45000">45000</item>
        <item name="50000">50000</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Dialog message -->
    <string name="caption_error_connection">Lỗi kết nối</string>
    <string name="msg_error_connection">Opps! Ứng dụng này yêu cầu kết nối Internet.\n Hãy kiểm tra lại kết nối Internet của bạn.</string>

    <!-- url connection -->
    <string name="URL_GET_ALL_POI">http://blackpoints.jelastic.lunacloud.com/service/client/getAll</string>
    <string name="URL_GET_POI_IN_RADIUS">http://blackpoints.jelastic.lunacloud.com/service/client/getPOIInRadius/</string>

    <!-- Json node name -->
    <!-- ====== POI ====== -->
    <string name="TAG_ID">id</string>
    <string name="TAG_NAME">name</string>
    <string name="TAG_ADDRESS">address</string>
    <string name="TAG_CITY">city</string>
    <string name="TAG_DISTRICT">district</string>
    <string name="TAG_DESCRIPTION">description</string>
    <string name="TAG_IMAGE">image</string>
    <string name="TAG_MARKER_ICON">markerIcon</string>
    <string name="TAG_GEOMETRY">geometry</string>
    <string name="TAG_CATEGORY">category</string>
    <string name="TAG_RATING">rating</string>
    <string name="TAG_CREATE_DATE">createdOnDate</string>
    <string name="TAG_DISTANCE">distance</string>

</resources>