<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="false" >

    <TextView
        android:id="@+id/project_name_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/project_name_1"
        android:textSize="18sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/project_name_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/project_name_1"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/project_name_2"
        android:textSize="15sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/student_roll_and_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/student_name"
        android:layout_below="@+id/student_name"
        android:text="@string/student_roll_and_class"
        android:textSize="10sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teacher_name"
        android:layout_below="@+id/project_name_2"
        android:layout_marginTop="31dp"
        android:text="@string/student_name"
        android:textColor="#FF5757"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/teacher"
        android:text="@string/teacher_name"
        android:textColor="#FF5757"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="27dp"
        android:paddingLeft="30dp"
        android:text="@string/teacher"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>