<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <!-- Name of POI -->

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbnail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="#2B394A"
        android:textSize="18sp"
        android:typeface="sans" />
    
    <!-- Distance -->

    <TextView
        android:id="@+id/distanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/distance"
        android:textColor="#2B394A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/distanceTitle"
        android:text="@string/app_name"
        android:textColor="#FF5757" />

    <!-- Address -->

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/address"
        android:textColor="#2B394A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/addressTitle"
        android:text="@string/app_name"
        android:textColor="#2B394A" />

    <!-- Create date -->

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/date"
        android:textColor="#2B394A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/dateTitle"
        android:text="@string/app_name"
        android:textColor="#2B394A" />
    
     <!-- Category -->

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/category"
        android:textColor="#2B394A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/categoryTitle"
        android:text="@string/app_name"
        android:textColor="#FF5757" />
    
    
     <!-- Rating -->

    <TextView
        android:id="@+id/ratingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/rating"
        android:textColor="#2B394A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/ratingTitle"
        android:text="@string/app_name"
        android:textColor="#FF5757" />
    
    <!-- Description -->
    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/description"
        android:textColor="#2B394A"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/descriptionTitle"
        android:text="@string/description"
        android:textColor="#2B394A" />

</RelativeLayout>